@@ -27,4 +27,8 @@ processResources {
     }
 }
 
+test {
+    jvmArgs << ['--add-opens java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens java.base/java.io=ALL-UNNAMED']
+}
+
 setupJar(this)
